Add VSTS mvn config + credential loading + updates commented-out distApi entry to point to latest vsts mvn deployment

--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,7 @@
+// Load credentials for VSTS Maven
+project.ext.vstsUsername = System.getenv("ENV_VSTS_MVN_ANDROIDCOMMON_USERNAME") != null ? System.getenv("ENV_VSTS_MVN_ANDROIDCOMMON_USERNAME") : project.findProperty("vstsUsername")
+project.ext.vstsPassword = System.getenv("ENV_VSTS_MVN_ANDROIDCOMMON_ACCESSTOKEN") != null ? System.getenv("ENV_VSTS_MVN_ANDROIDCOMMON_ACCESSTOKEN") : project.findProperty("vstsMavenAccessToken")
+
 buildscript {
     apply from: rootProject.file("gradle/versions.gradle")
 
@@ -16,6 +20,14 @@ allprojects {
         mavenLocal()
         jcenter()
         google()
+        maven {
+            name "vsts-maven-adal-android"
+            url "https://identitydivision.pkgs.visualstudio.com/_packaging/AndroidADAL/maven/v1"
+            credentials {
+                username project.vstsUsername
+                password project.vstsPassword
+            }
+        }
     }
 }
 
