--- a/msal/src/main/res/raw/msal_default_config.json
+++ b/msal/src/main/res/raw/msal_default_config.json
@@ -1,11 +1,9 @@
 {
-  "client_id" : "<CLIENT_ID>",
-  "redirect_uri" : "<REDIRECT_URI>",
   "authorities" : [
     {
       "type" : "AAD",
       "audience": {
-        "type" : "AzureADandPersonalMicrosoftAccount",
+        "type" : "AzureADandPersonalMicrosoftAccount"
       },
       "default": true
     }
