--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,8 @@ allprojects {
             name "vsts-maven-adal-android"
             url "https://identitydivision.pkgs.visualstudio.com/_packaging/AndroidADAL/maven/v1"
             credentials {
-                username project.vstsUsername
-                password project.vstsPassword
+                username project.findProperty("vstsUsername")
+                password project.findProperty("vstsADALAndroidInternalGradleAccessToken")
             }
         }
     }
