Added vsts repo to msal publish task and renamed version name

--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -239,6 +239,18 @@ publishing {
         }
 
     }
+
+    // Repositories to which Gradle can publish artifacts
+    repositories {
+        maven {
+            name "vsts-maven-adal-android"
+            url "https://identitydivision.pkgs.visualstudio.com/_packaging/AndroidADAL/maven/v1"
+            credentials {
+                username System.getenv("ENV_VSTS_MVN_ANDROID_MSAL_USERNAME") != null ? System.getenv("ENV_VSTS_MVN_ANDROID_MSAL_USERNAME") : project.findProperty("vstsUsername")
+                password System.getenv("ENV_VSTS_MVN_ANDROID_MSAL_ACCESSTOKEN") != null ? System.getenv("ENV_VSTS_MVN_ANDROID_MSAL_ACCESSTOKEN") : project.findProperty("vstsMavenAccessToken")
+            }
+        }
+    }
 }
 
 tasks.whenTaskAdded { task ->
