--- a/testapps/testapp/src/main/res/raw/msal_config.json
+++ b/testapps/testapp/src/main/res/raw/msal_config.json
@@ -1,18 +1,12 @@
 {
-  "client_id" : "",
-  "redirect_uri" : "",
+  "client_id" : "9851987a-55e5-46e2-8d70-75f8dc060f21",
+  "redirect_uri" : "msal9851987a-55e5-46e2-8d70-75f8dc060f21://auth",
   "authorities" : [
     {
       "type": "AAD",
       "audience": {
-        "type": "AzureADMyOrg",
-        "tenant_id": "[tenantid]"
-      },
-      "slice": {
-        "slice": "test",
-        "dc": "WUS"
-      },
-      "flight_parameters": [{"key1": "value1"}, {"key2": "value2"}]
+        "type": "AzureADandPersonalMicrosoftAccount"
+      }
     }
   ]
 }
