--- a/testapps/testapp/src/main/res/raw/msal_config.json
+++ b/testapps/testapp/src/main/res/raw/msal_config.json
@@ -1,12 +1,13 @@
 {
   "client_id" : "9851987a-55e5-46e2-8d70-75f8dc060f21",
+  "authorization_user_agent" : "DEFAULT",
   "redirect_uri" : "msal9851987a-55e5-46e2-8d70-75f8dc060f21://auth",
   "authorities" : [
     {
       "type": "AAD",
       "audience": {
-        "type": "AzureADMyOrg",
-        "tenant_id": "microsoft.com"
+        "type": "AzureADandPersonalMicrosoftAccount",
+        "tenant_id": "common"
       },
       "slice": {
         "slice": "testslice",
