--- a/testapps/testapp/src/main/AndroidManifest.xml
+++ b/testapps/testapp/src/main/AndroidManifest.xml
@@ -56,8 +56,7 @@
         </activity>
 
         <activity
-            android:name="com.microsoft.identity.client.BrowserTabActivity"
-            android:launchMode="singleTop">
+            android:name="com.microsoft.identity.client.BrowserTabActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
