Changes to test app

--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -125,7 +125,7 @@ dependencies {
         transitive = false
     }
 
-    snapshotApi(group: 'com.microsoft.identity', name: 'common', version: '0.0.3-SNAPSHOT', changing: true)
+    snapshotApi("com.microsoft.identity:common:0.0.5-RC3")
 
     distApi("com.microsoft.identity:common:0.0.5-RC3") {
         transitive = false
