--- a/testapps/testapp/src/main/AndroidManifest.xml
+++ b/testapps/testapp/src/main/AndroidManifest.xml
@@ -61,8 +61,10 @@
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="msal9851987a-55e5-46e2-8d70-75f8dc060f21"
+                <data android:scheme="msale3b9ad76-9763-4827-b088-80c7a7888f79"
                     android:host="auth" />
+
+                <!--<data android:scheme="http" android:host="localhost" android:path="/someapp" />-->
             </intent-filter>
         </activity>
 
