--- a/testapps/testapp/build.gradle
+++ b/testapps/testapp/build.gradle
@@ -30,7 +30,7 @@ android {
 
     defaultConfig {
         applicationId "com.microsoft.identity.client.sample"
-        minSdkVersion rootProject.ext.minSdkVersion
+        minSdkVersion 16
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
