Updates common dependency 0.0.5 -> 0.0.5-hf1

--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -125,9 +125,9 @@ dependencies {
         transitive = false
     }
 
-    snapshotApi(group: 'com.microsoft.identity', name: 'common', version: '0.0.5', changing: true)
+    snapshotApi(group: 'com.microsoft.identity', name: 'common', version: '0.0.5-hf1', changing: true)
 
-    distApi("com.microsoft.identity:common:0.0.5") {
+    distApi("com.microsoft.identity:common:0.0.5-hf1") {
         transitive = false
     }
 }
