Updates for multiple clouds

--- a/testapps/testapp/build.gradle
+++ b/testapps/testapp/build.gradle
@@ -26,8 +26,15 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+            storeFile file('E:/projects/github.com/azuread/msal_android/testapps/testapp/debug/debug.keystore')
+            storePassword 'android'
+        }
+    }
     compileSdkVersion rootProject.ext.compileSdkVersion
-
     defaultConfig {
         applicationId "com.microsoft.identity.client.sample"
         minSdkVersion rootProject.ext.minSdkVersion
@@ -41,13 +48,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
     lintOptions {
         abortOnError false
     }
     flavorDimensions "main"
-
     productFlavors {
+        def signingInfo = signingConfigs.config
         local {
             applicationIdSuffix ".local"
             versionNameSuffix "-local"
@@ -57,6 +63,7 @@ android {
             applicationIdSuffix ".dist"
             versionNameSuffix "-dist"
             resValue("string", "application_name", "msal-dist")
+            signingConfig signingInfo
         }
     }
 }
@@ -64,6 +71,7 @@ android {
 dependencies {
     // Compile Dependency
     implementation project(':msal')
+    distImplementation group: 'com.microsoft.identity.client', name: 'msal', version: '0.2.0'
     implementation "com.google.code.gson:gson:$rootProject.ext.gsonVersion"
     implementation "com.android.support:appcompat-v7:$rootProject.ext.supportLibraryVersion"
     implementation "com.android.support:support-v4:$rootProject.ext.supportLibraryVersion"
