--- a/testapps/testapp/src/main/res/raw/msal_config.json
+++ b/testapps/testapp/src/main/res/raw/msal_config.json
@@ -7,7 +7,8 @@
       "type": "AAD",
       "audience": {
         "type": "AzureADandPersonalMicrosoftAccount"
-      }
+      },
+      "multiple_clouds_supported":false
     }
   ]
 }
