--- a/msal/src/main/res/raw/msal_default_config.json
+++ b/msal/src/main/res/raw/msal_default_config.json
@@ -9,6 +9,7 @@
     }
   ],
   "authorization_user_agent": "DEFAULT",
+  "multiple_clouds_supported": false,
   "http": {
     "connect_timeout": 10000,
     "read_timeout": 30000
