--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -1,13 +1,13 @@
 // Variables for entire project
 ext {
     // SDK
-    minSdkVersion = 21
+    minSdkVersion = 16
     targetSdkVersion = 27
     compileSdkVersion = 27
     buildToolsVersion = "27.0.3"
 
     // Plugins
-    gradleVersion = "3.1.3"
+    gradleVersion = '3.2.0'
     androidMavenGradlePluginVersion = "1.4.1"
 
     // Libraries
