--- a/msal/src/main/res/raw/msal_default_config.json
+++ b/msal/src/main/res/raw/msal_default_config.json
@@ -10,6 +10,7 @@
   ],
   "authorization_user_agent": "DEFAULT",
   "multiple_clouds_supported": false,
+  "broker_redirect_uri_registered": false,
   "http": {
     "connect_timeout": 10000,
     "read_timeout": 30000
