--- a/testapps/testapp/src/main/res/raw/msal_config.json
+++ b/testapps/testapp/src/main/res/raw/msal_config.json
@@ -3,6 +3,7 @@
   "authorization_user_agent" : "DEFAULT",
   "redirect_uri" : "msal9851987a-55e5-46e2-8d70-75f8dc060f21://auth",
   "multiple_clouds_supported":true,
+  "broker_redirect_uri_registered": true,
   "authorities" : [
     {
       "type": "AAD",
