Changes to get result from MSAL joined interactive
(cherry picked from commit bebbb6cbf9ca969f4b26d0fc4216bb36cb620f5b)

--- a/msal/src/main/AndroidManifest.xml
+++ b/msal/src/main/AndroidManifest.xml
@@ -21,5 +21,9 @@
         <activity
             android:name="com.microsoft.identity.client.BrowserTabActivity"
             android:exported="true" />
+
+        <activity
+            android:name="com.microsoft.identity.client.internal.controllers.BrokerActivity"
+            android:exported="true" />
     </application>
 </manifest>
