--- a/msal/src/main/AndroidManifest.xml
+++ b/msal/src/main/AndroidManifest.xml
@@ -22,8 +22,8 @@
             android:name="com.microsoft.identity.client.BrowserTabActivity"
             android:exported="true" />
 
+        <!-- Activity to invoke an interactive request to the intent passed by ad-accounts(Broker) -->
         <activity
-            android:name="com.microsoft.identity.client.internal.controllers.BrokerActivity"
-            android:exported="true" />
+            android:name="com.microsoft.identity.client.internal.controllers.BrokerActivity" />
     </application>
 </manifest>
