--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -125,7 +125,7 @@ dependencies {
         transitive = false
     }
 
-    snapshotApi(group: 'com.microsoft.identity', name: 'common', version: '0.0.8', changing: true)
+    snapshotApi(group: 'com.microsoft.identity', name: 'common', version: '0.0.8-SNAPSHOT', changing: true)
 
     distApi("com.microsoft.identity:common:0.0.8") {
         transitive = false
