--- a/msal/src/androidTest/AndroidManifest.xml
+++ b/msal/src/androidTest/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:label="@string/app_name"
+        android:label="MSAL Test App"
         android:allowBackup="false">
         <uses-library android:name="android.test.runner" />
 
