--- a/testapps/testapp/src/main/AndroidManifest.xml
+++ b/testapps/testapp/src/main/AndroidManifest.xml
@@ -63,7 +63,7 @@
 
         <meta-data
             android:name="com.microsoft.identity.client.ClientId"
-            android:value="b92e0ba5-f86e-4411-8e18-6b5f928d968a"/>
+            android:value="4b0db8c2-9f26-4417-8bde-3f0e3656f8e0a"/>
     </application>
 
 </manifest>
