--- a/testapps/testapp/src/main/AndroidManifest.xml
+++ b/testapps/testapp/src/main/AndroidManifest.xml
@@ -55,14 +55,15 @@
                 <category android:name="android.intent.category.BROWSABLE" />
                 <!-- To Test PPE:  msal7cc2dd84-bb0f-4711-8fca-4c7d01249f56 -->
                 <!-- To Test Sovereign: msalcb7faed4-b8c0-49ee-b421-f5ed16894c83 -->
-                <data android:scheme="msal9851987a-55e5-46e2-8d70-75f8dc060f21"
-                    android:host="auth" />
+                <data android:scheme="msauth"
+                    android:host="com.microsoft.identity.client.sample.local"
+                    android:path="/QK0hWtPIQviyU3IX8AhunaS0IY4="/>
             </intent-filter>
         </activity>
 
         <meta-data
             android:name="com.microsoft.identity.client.ClientId"
-            android:value="9851987a-55e5-46e2-8d70-75f8dc060f21"/>
+            android:value="2652503c-ba8e-4ed9-b2ea-6512b9f16c98"/>
     </application>
 
 </manifest>
