--- a/testapps/testapp/src/main/res/raw/msal_config.json
+++ b/testapps/testapp/src/main/res/raw/msal_config.json
@@ -1,9 +1,10 @@
 {
-  "client_id" : "9851987a-55e5-46e2-8d70-75f8dc060f21",
+  "client_id" : "2652503c-ba8e-4ed9-b2ea-6512b9f16c98",
   "authorization_user_agent" : "DEFAULT",
-  "redirect_uri" : "msal9851987a-55e5-46e2-8d70-75f8dc060f21://auth",
+  "redirect_uri" : "msauth://com.microsoft.identity.client.sample.local/QK0hWtPIQviyU3IX8AhunaS0IY4%3D",
   "multiple_clouds_supported":true,
   "broker_redirect_uri_registered": true,
+  "minimum.required.broker.protocol.version":"2.0",
   "authorities" : [
     {
       "type": "AAD",
