--- a/msal/src/main/res/raw/msal_default_config.json
+++ b/msal/src/main/res/raw/msal_default_config.json
@@ -16,6 +16,8 @@
     "connect_timeout": 10000,
     "read_timeout": 30000
   },
+  "shared_device_mode_supported": false,
+  "account_mode": "MULTIPLE",
   "browser_safelist": [
     {
       "browser_package_name": "com.android.chrome",
