--- a/testapps/testapp/src/main/res/raw/msal_config_webview.json
+++ b/testapps/testapp/src/main/res/raw/msal_config_webview.json
@@ -1,7 +1,7 @@
 {
   "client_id" : "4b0db8c2-9f26-4417-8bde-3f0e3656f8e0",
   "authorization_user_agent" : "WEBVIEW",
-  "redirect_uri" : "msauth://com.microsoft.identity.client.sample.local/QK0hWtPIQviyU3IX8AhunaS0IY4%3D",
+  "redirect_uri" : "msauth://com.microsoft.identity.client.sample.local/1wIqXSqBj7w%2Bh11ZifsnqwgyKrY%3D",
   "multiple_clouds_supported":true,
   "broker_redirect_uri_registered": true,
   "minimum.required.broker.protocol.version":"2.0",
