--- a/testapps/testapp/src/main/AndroidManifest.xml
+++ b/testapps/testapp/src/main/AndroidManifest.xml
@@ -58,9 +58,15 @@
                 <category android:name="android.intent.category.BROWSABLE" />
                 <!-- To Test PPE:  msal7cc2dd84-bb0f-4711-8fca-4c7d01249f56 -->
                 <!-- To Test Sovereign: msalcb7faed4-b8c0-49ee-b421-f5ed16894c83 -->
+                <!--
+                <data android:scheme="msal7cc2dd84-bb0f-4711-8fca-4c7d01249f56"
+                    android:host="auth" />-->
+
+
                 <data android:scheme="msauth"
                     android:host="com.microsoft.identity.client.sample.local"
-                    android:path="/1wIqXSqBj7w%2Bh11ZifsnqwgyKrY%3D"/>
+                    android:path="/gwdiktUBDmQq+fbWiJoa+/YH070="/>
+
             </intent-filter>
         </activity>
     </application>
