--- a/testapps/testapp/src/main/res/raw/msal_ppe_config.json
+++ b/testapps/testapp/src/main/res/raw/msal_ppe_config.json
@@ -1,6 +1,6 @@
 {
   "client_id" : "7cc2dd84-bb0f-4711-8fca-4c7d01249f56",
-  "authorization_user_agent" : "DEFAULT",
+  "authorization_user_agent" : "WEBVIEW",
   "redirect_uri" : "msal7cc2dd84-bb0f-4711-8fca-4c7d01249f56://auth",
   "multiple_clouds_supported":true,
   "broker_redirect_uri_registered": true,
@@ -9,7 +9,15 @@
     {
       "type": "AAD",
       "audience": {
-        "type": "AzureADandPersonalMicrosoftAccount"
+        "type": "AzureADMultipleOrgs",
+        "tenant_id": "organizations"
+      },
+      "default": true
+    },
+    {
+      "type": "AAD",
+      "audience": {
+        "type": "PersonalMicrosoftAccount"
       }
     }
   ]
