--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -3,19 +3,21 @@ ext {
     // SDK
     minSdkVersion = 16
     targetSdkVersion = 27
-    compileSdkVersion = 27
+    compileSdkVersion = 28
     buildToolsVersion = "28.0.3"
 
     // Plugins
-    gradleVersion = '3.2.1'
+    gradleVersion = '3.3.2'
     androidMavenGradlePluginVersion = "1.4.1"
 
-    // Libraries
-    supportLibraryVersion = "27.1.1"
+    // Libraries (alphabetically sorted)
+    appCompatVersion = "1.0.2"
+    browserVersion = "1.0.0"
+    gsonVersion = "2.8.4"
     junitVersion = "4.12"
+    localBroadcastManagerVersion = "1.0.0"
     mockitoCoreVersion = "2.18.3"
     mockitoAndroidVersion = "2.18.3"
-    runnerVersion = "0.5"
-    rulesVersion = "0.5"
-    gsonVersion = "2.8.4"
+    runnerVersion = "1.2.0"
+    rulesVersion = "1.2.0"
 }
