Wire up the telemetry configuration with json.

--- a/testapps/testapp/src/main/res/raw/msal_config.json
+++ b/testapps/testapp/src/main/res/raw/msal_config.json
@@ -11,5 +11,10 @@
         "type": "AzureADandPersonalMicrosoftAccount"
       }
     }
-  ]
+  ],
+  "telemetry": {
+    "pii_enabled": true,
+    "notify_on_failure_only": false,
+    "debug_enabled": true
+  }
 }
