--- a/msal/src/main/res/raw/msal_default_config.json
+++ b/msal/src/main/res/raw/msal_default_config.json
@@ -9,6 +9,7 @@
     }
   ],
   "authorization_user_agent": "DEFAULT",
+  "minimum_required_broker_protocol_version":"3.0",
   "multiple_clouds_supported": false,
   "broker_redirect_uri_registered": false,
   "environment": "Production",
