Integrate the Api events. Update the configuration json of the test app.

--- a/testapps/testapp/src/main/res/raw/msal_config.json
+++ b/testapps/testapp/src/main/res/raw/msal_config.json
@@ -13,7 +13,7 @@
     }
   ],
   "telemetry": {
-    "pii_enabled": true,
+    "pii_enabled": false,
     "notify_on_failure_only": false,
     "debug_enabled": true
   }
