--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ android:
     # https://github.com/travis-ci/travis-ci/issues/6059
     - tools
     - platform-tools
+    - tools
     - build-tools-28.0.3
     - android-25
     - android-27
