--- a/.travis.yml
+++ b/.travis.yml
@@ -2,21 +2,39 @@
 language: android
 jdk: oraclejdk8
 
+# Use the Travis Container-Based Infrastructure
+sudo: false
+
+env:
+  global:
+    - ANDROID_API_LEVEL=23
+    - EMULATOR_API_LEVEL=21
+    - ANDROID_BUILD_TOOLS_VERSION=23.0.2
+    - ANDROID_ABI=armeabi-v7a
+    - ANDROID_TAG=google_apis
+    - ADB_INSTALL_TIMEOUT=20 # minutes (2 minutes by default)
+
 android:
   components:
     - tools
     - platform-tools
-    - build-tools-28.0.3
-    - android-27
-    - extra
-    - extra-android-m2repository
+    - tools
+    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
+    - android-$ANDROID_API_LEVEL
+    - android-$EMULATOR_API_LEVEL
+    # For Google APIs
+    - addon-google_apis-google-$ANDROID_API_LEVEL
+    - addon-google_apis-google-$EMULATOR_API_LEVEL
+    # Google Play Services
+    - extra-google-google_play_services
+    # Support library
+    - extra-android-support
+    # Latest artifacts in local repository
     - extra-google-m2repository
-    - addon-google_apis-google-21
-    ## Emulator config ##
-    # The SDK version used for the emulator
-    - android-21
-    #system images
-    - sys-img-armeabi-v7a-addon-google_apis-google-21
+    - extra-android-m2repository
+    # Specify at least one system image
+    - sys-img-armeabi-v7a-google_apis-$ANDROID_API_LEVEL
+    - sys-img-armeabi-v7a-google_apis-$EMULATOR_API_LEVEL
 
 licenses:
     - 'android-sdk-preview-license-.+'
