--- a/.travis.yml
+++ b/.travis.yml
@@ -55,8 +55,9 @@ cache:
 
 before_script:
   - echo no | android create avd --force -n test -t "android-"$EMULATOR_API_LEVEL --abi $ANDROID_ABI --tag $ANDROID_TAG
-  - emulator -avd test -no-audio -no-window &
+  - emulator -avd test -no-window &
   - android-wait-for-emulator
+  - adb shell input keyevent 82 &
 
 script:
   - cd $PWD
