--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ env:
     - ANDROID_ABI=armeabi-v7a
     - ANDROID_TAG=google_apis
     - ADB_INSTALL_TIMEOUT=20 # minutes (2 minutes by default)
+    - QEMU_AUDIO_DRV=none
 
 android:
   components:
@@ -55,9 +56,8 @@ cache:
 
 before_script:
   - echo no | android create avd --force -n test -t "android-"$EMULATOR_API_LEVEL --abi $ANDROID_ABI --tag $ANDROID_TAG
-  - emulator -avd test -no-window &
+  - emulator -avd test -no-skin -no-window &
   - android-wait-for-emulator
-  - adb shell input keyevent 82 &
 
 script:
   - cd $PWD
