--- a/.travis.yml
+++ b/.travis.yml
@@ -1,46 +1,24 @@
-# ./travis.yml for MSAL android
 language: android
 jdk: oraclejdk8
-
-# Use the Travis Container-Based Infrastructure
-sudo: false
-
-env:
-  global:
-    - ANDROID_API_LEVEL=27
-    - EMULATOR_API_LEVEL=16
-    - ANDROID_BUILD_TOOLS_VERSION=28.0.3
-    - ANDROID_ABI=armeabi-v7a
-    - ANDROID_TAG=google_apis
-    - ADB_INSTALL_TIMEOUT=20 # minutes (2 minutes by default)
-    - QEMU_AUDIO_DRV=none
-
+dist: trusty
 android:
   components:
     - tools
     - platform-tools
-    - tools
-    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
-    - android-$ANDROID_API_LEVEL
-    - android-$EMULATOR_API_LEVEL
-    # For Google APIs
-    - addon-google_apis-google-$ANDROID_API_LEVEL
-    - addon-google_apis-google-$EMULATOR_API_LEVEL
-    # Google Play Services
+
+    # BuildTools version used by this project
+    - build-tools-28.0.3
+
+    # Compilation SDK version
+    - android-27
+
+    # Additional Components
     - extra-google-google_play_services
-    # Support library
-    - extra-android-support
-    # Latest artifacts in local repository
     - extra-google-m2repository
     - extra-android-m2repository
-    # Specify at least one system image
-    - sys-img-armeabi-v7a-google_apis-$ANDROID_API_LEVEL
-    - sys-img-armeabi-v7a-google_apis-$EMULATOR_API_LEVEL
 
-licenses:
-    - 'android-sdk-preview-license-.+'
-    - 'android-sdk-license-.+'
-    - 'google-gdk-license-.+'
+    # Emulator image
+    - sys-img-x86-android-27
 
 before_install:
   - chmod +x gradlew
@@ -48,6 +26,7 @@ before_install:
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+
 cache:
   directories:
     - $HOME/.gradle/caches/
@@ -55,7 +34,8 @@ cache:
     - $HOME/.android/build-cache
 
 before_script:
-  - echo no | android create avd --force -n test -t "android-"$EMULATOR_API_LEVEL --abi $ANDROID_ABI --tag $ANDROID_TAG
+  - android list targets
+  - echo no | android create avd --force -n test -t android-27 --abi x86 --tag google_apis
   - emulator -avd test -no-skin -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
