--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,14 @@ android:
 
     # Compilation SDK version
     - android-27
+    - android-25
 
     # Additional Components
     - extra-google-m2repository
     - extra-android-m2repository
 
     # Emulator image
-    - sys-img-x86-addon-google_apis-google-27
+    - sys-img-armeabi-v7a-google_apis-25
 
 before_install:
   - chmod +x gradlew
@@ -34,7 +35,7 @@ cache:
 
 before_script:
   - android list targets
-  - echo no | android create avd --force -n test -t android-27 --abi x86 --tag google_apis
+  - echo no | android create avd --force -n test -t android-25 --abi armeabi-v7a --tag google_apis
   - emulator -avd test -no-skin -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
