--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ cache:
 
 before_script:
   - android list targets
-  - echo no | android create avd --force -n test -t android-25 --abi x86_64 --tag google_apis
+  - echo no | android create avd --force -no-accel -n test -t android-25 --abi x86_64 --tag google_apis
   - emulator -avd test -no-skin -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
