--- a/.travis.yml
+++ b/.travis.yml
@@ -12,15 +12,9 @@ android:
     # Compilation SDK version
     - android-27
 
-    # Emulator SDK Version
-    - android-25
-
     # Additional Components
     - extra-google-m2repository
     - extra-android-m2repository
-
-    # Emulator image
-    - sys-img-x86_64-google_apis-25
 
 before_install:
   - chmod +x gradlew
@@ -37,11 +31,7 @@ cache:
 
 before_script:
   - android list targets
-  - echo no | android create avd --force -no-accel -n test -t android-25 --abi x86_64 --tag google_apis
-  - emulator -avd test -no-skin -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
 
 script:
   - cd $PWD
-  - ./gradlew clean msal:assembleLocal msal:connectedLocalDebugAndroidTest -PdisablePreDex
+  - ./gradlew clean msal:assembleLocal
