--- a/.travis.yml
+++ b/.travis.yml
@@ -1,44 +1,20 @@
-# ./travis.yml for MSAL android
-
 language: android
-dist: precise
-
-jdk:
-  - oraclejdk8
-
-# Don't use the Travis Container-Based Infrastructure
-sudo: true
-
+jdk: oraclejdk8
+dist: trusty
 android:
   components:
-    # Travis has a bug that we need to workaround to use sdk 25
-    # https://github.com/travis-ci/travis-ci/issues/6059
     - tools
     - platform-tools
+
+    # BuildTools version used by this project
     - build-tools-28.0.3
-    - android-25
+
+    # Compilation SDK version
     - android-27
-    - extra
-    - extra-android-m2repository
+
+    # Additional Components
     - extra-google-m2repository
-    - addon-google_apis-google-21
-    ## Emulator config ##
-    # The SDK version used for the emulator
-    - android-21
-    #system images
-    - sys-img-armeabi-v7a-addon-google_apis-google-21
-
-licenses:
-    - 'android-sdk-preview-license-.+'
-    - 'android-sdk-license-.+'
-    - 'google-gdk-license-.+'
-
-env:
-    global:
-      # This is to guaratee a clean gradle log
-      - TERM=dumb
-    matrix:
-      - ANDROID_SDKS=android-27 ANDROID_TARGET=android-27
+    - extra-android-m2repository
 
 before_install:
   - chmod +x gradlew
@@ -46,6 +22,7 @@ before_install:
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+
 cache:
   directories:
     - $HOME/.gradle/caches/
@@ -53,11 +30,8 @@ cache:
     - $HOME/.android/build-cache
 
 before_script:
-  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
-  - emulator -avd test -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
+  - android list targets
 
 script:
   - cd $PWD
-  - ./gradlew clean msal:assembleLocal msal:connectedLocalDebugAndroidTest -PdisablePreDex
+  - ./gradlew clean msal:assembleLocal
