--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,23 @@
 language: android
 jdk: oraclejdk8
 dist: trusty
+
+# Build Variables
+env:
+  global:
+    - BUILD_TOOLS_VERSION=28.0.3
+    - ANDROID_COMPILE_API_LEVEL=27
+
 android:
   components:
     - tools
     - platform-tools
 
     # BuildTools version used by this project
-    - build-tools-28.0.3
+    - build-tools-$BUILD_TOOLS_VERSION
 
     # Compilation SDK version
-    - android-27
+    - android-$ANDROID_COMPILE_API_LEVEL
 
     # Additional Components
     - extra-google-m2repository
