--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -12,6 +12,7 @@ ext {
     androidMavenGradlePluginVersion = "1.4.1"
 
     // Libraries
+    androidxJunitVersion = "1.1.1"
     annotationVersion = "1.0.0"
     appCompatVersion = "1.0.2"
     browserVersion = "1.0.0"
