Updates submodule to latest, updates Gradle plugin + wrapper (#706)
* Update submodule to latest

* Update gradle plugin + wrapper version

* Test reenabling emulator

* Increasing timeout

* Ignoring busted tests

* Update submodule to latest

* Committing missed file

* Updating tests + runner infrastructure

* Additional config for mockito

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,44 +1,34 @@
 # ./travis.yml for MSAL android
-
 language: android
-dist: precise
-
-jdk:
-  - oraclejdk8
+jdk: oraclejdk8
 
 # Don't use the Travis Container-Based Infrastructure
 sudo: true
 
+# Build Variables
+env:
+  global:
+    - BUILD_TOOLS_VERSION=28.0.3
+    - COMPILE_SDK_VERSION=28
+    - EMULATOR_API_VERSION=21
+
+    # This is to guarantee a clean gradle log
+    - TERM=dumb
+
 android:
   components:
-    # Travis has a bug that we need to workaround to use sdk 25
-    # https://github.com/travis-ci/travis-ci/issues/6059
     - tools
     - platform-tools
-    - build-tools-28.0.3
-    - android-25
-    - android-27
-    - extra
-    - extra-android-m2repository
+    - build-tools-$BUILD_TOOLS_VERSION
+    - android-$COMPILE_SDK_VERSION
     - extra-google-m2repository
-    - addon-google_apis-google-21
+
     ## Emulator config ##
     # The SDK version used for the emulator
-    - android-21
+    - android-$EMULATOR_API_VERSION
+
     #system images
-    - sys-img-armeabi-v7a-addon-google_apis-google-21
-
-licenses:
-    - 'android-sdk-preview-license-.+'
-    - 'android-sdk-license-.+'
-    - 'google-gdk-license-.+'
-
-env:
-    global:
-      # This is to guaratee a clean gradle log
-      - TERM=dumb
-    matrix:
-      - ANDROID_SDKS=android-27 ANDROID_TARGET=android-27
+    - sys-img-armeabi-v7a-android-$EMULATOR_API_VERSION
 
 before_install:
   - chmod +x gradlew
@@ -53,11 +43,12 @@ cache:
     - $HOME/.android/build-cache
 
 before_script:
-  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+  - android list targets
+  - echo no | android create avd --force -n test -t android-$EMULATOR_API_VERSION --abi armeabi-v7a
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
 script:
   - cd $PWD
-  - ./gradlew clean msal:assembleLocal msal:connectedLocalDebugAndroidTest -PdisablePreDex
+  - travis_wait ./gradlew clean msal:assembleLocal msal:connectedLocalDebugAndroidTest -PdisablePreDex
