Add keyvault and labapi to msal's settings.gradle

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,7 @@
-include ':msal', ':common'
+include ':msal', ':common', ':keyvault', ':labapi'
 project(':common').projectDir = new File('common/common')
+project(':keyvault').projectDir = new File('common/keyvault')
+project(':labapi').projectDir = new File('common/labapi')
 
 // test apps
 include ':testapps:sample'
